# super-mario-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Camera.py  Collider.py  Collission_Detection.py  Dashboard.py  Editor.py  Font.py  Input.py  Level.py  README.md  Sprites.py  Spritesheet.py  Tile.py  animation.py  collissionDetection.py  compile.py  drawLevel.py  input.py  levelEditor.py  main.py  mario.py  mypy.ini  pyproject.toml  requirements.txt  settings.json  sprite.py  sprites.py  spritesheet.py
.github/workflows/: pre-commit.yml
classes/: Animation.py  Camera.py  Collider.py  Dashboard.py  EntityCollider.py  Font.py  GaussianBlur.py  Input.py  Level.py  Maths.py  Menu.py  Pause.py  Sound.py  Sprite.py  Sprites.py  Spritesheet.py  Tile.py  __init__.py
entities/: Coin.py  CoinBox.py  CoinBrick.py  EntityBase.py  Goomba.py  Item.py  Koopa.py  Mario.py  Mushroom.py  RandomBox.py  __init__.py
entities/Kafka/: main.py
levels/: Level1-1.json  Level1-2.json  Level1-3.json  Level1-4.json  Level1-5.json  Level1-6.json
sfx/: Sound.py
sprites/: AnimationSprites.json  Animations.json  BackgroundSprites.json  CharacterSprites.json  Goomba.json  ItemAnimations.json  Koopa.json  Mario.json  RedMushroom.json
standalone/: pygame2exe.py
traits/: baseTrait.py  bounce.py  go.py  jump.py  leftrightwalk.py
